feat: Set config.ini to set the crawler start period
Set the variables in config.ini from the start time of the crawler to capture the climate data.

--- a/lib/config/config.ini
+++ b/lib/config/config.ini
@@ -1,3 +1,19 @@
+[crawler_start_period]
+# date、months、year 這幾個變數只能擇一使用，
+# 可設定 date、months 或 year 其中一變數為優先設定，不能設定其他內容
+default=year
+
+# 從某天的資料時段開始擷取 (format: YYYY-MM-DD)，例如：2017-12-25
+# 最早時段只能設定至 2010-01-01 (中央氣象局提供的資料範圍)
+date=2017-12-25
+
+# 從幾個月前的資料時段開始擷取 (type: int，且 >= 1)，例如：1、2、3
+months=3
+
+# 從某年的資料時段開始擷取 (type: YYYY，且 >= 2010，<= 今年)，例如：2010、2012、2018
+# 最早時段只能設定至 2010 (中央氣象局提供的資料範圍)
+year=2018
+
 [database]
 host_ip=192.168.191.165
 port=1433
