--- a/lib/config/config.ini
+++ b/lib/config/config.ini
@@ -14,6 +14,22 @@ months=3
 # 最早時段只能設定至 2010 (中央氣象局提供的資料範圍)
 year=2018
 
+[crawler]
+# 要擷取的縣市的氣候資料 (type: string，可設定多行)，例如：
+# 1. 代表擷取所有縣市的氣候資料
+# cities=all
+
+# 2. 代表只擷取一個縣市的氣候資料
+# cities=臺北市
+
+# 3. 代表只擷取這幾個縣市的氣候資料
+# cities=
+#   臺北市
+#   新北市
+cities=
+  臺北市
+  新北市
+
 [database]
 host_ip=192.168.191.165
 port=1433
