feat: Set config.ini to set db tables name

--- a/lib/config/config.ini
+++ b/lib/config/config.ini
@@ -37,3 +37,8 @@ user_name=SA
 password=taipower@2018
 db_name=Test_DB
 db_url=mssql+pyodbc://${user_name}:${password}@${host_ip}:${port}/${db_name}?driver=SQL+Server
+
+[database_table_name]
+climate_daily=Daily_Climate_data
+climate_hourly=Hourly_Climate_data
+crawler_log=climate_crawler_log
