feat: re request max count and sleep_time & per request sleep time
If the status code is not 200, re-request, there is a sleep interval between requests.

--- a/lib/config/config.ini
+++ b/lib/config/config.ini
@@ -30,6 +30,15 @@ cities=
   臺北市
   新北市
 
+# 一個 URL 重新發 request 的最高次數限制 (type: int，且 >= 2)
+re_request_max_count=5
+
+# URL 重新發 request 的 sleep 時間間隔 (type: int，且 >= 1)
+re_request_sleep_time=5
+
+# 每個 request 之間的 sleep 時間間隔 (type: int，且 >= 1)
+per_request_sleep_time=1
+
 [database]
 host_ip=192.168.191.165
 port=1433
